samples/_failures_safe/1761129091_24883c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e3c905a.c: In function ‘main’:
./samples/SAFE/__tmp_6e3c905a.c:173:13: error: expected declaration or statement at end of input
  173 |             event = EVENT_RESET;
      |             ^~~~~
./samples/SAFE/__tmp_6e3c905a.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e3c905a.c:173:13: error: expected declaration or statement at end of input
